--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -1,6 +1,19 @@
 
 body {
 	font-family: sans-serif;
+			margin: 0;
+}
+
+#wrapper {
+	position: relative;
+}
+
+#chart {
+	top: 0px;
+	right: 0px;
+	position: absolute;
+	width: calc(100% - 470px);
+	height: 600px;
 }
 
 #map {
