add link to issues

--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -6,6 +6,10 @@ body {
 	background: radial-gradient(ellipse at center,#484b5a 0,#1d2029 100%);
 }
 
+a {
+	color: #fff;
+}
+
 #wrapper {
 	position: relative;
 	height: 600px;
