--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -40,17 +40,17 @@ a {
 	height: calc(100vh - 60px);
 }
 
+/*
 #slider_container {
 	position: absolute;
 	left: 0px;
 	bottom: 0px;
-	width: calc(100% - 470px);
-	text-align: center;
+	width: calc(100vw - 75vh);
 	z-index: 2000;
 }
 
 #slider_container input {
-	width: 60%;
+	position: absolute;
 	background: transparent;
 	height: 1rem;
 }
@@ -60,19 +60,7 @@ a {
 	text-align: right;
 	width: 60px;
 }
-
-.leaflet-container {
-	background: none;
-}
-.leaflet-tooltip {
-	padding: 4px;
-	line-height: 1em;
-}
-
-.leaflet-tooltip small {
-	color: #888;
-}
-
+*/
 #button_play {
 	font-family: Open Sans,Helvetica,Arial,sans-serif;
 	font-size: 24px;
@@ -96,7 +84,7 @@ a {
 #button-play:hover {
 	color: #e64242
 }
-
+/*
 input[type=range] {
 	-webkit-appearance:none;
 	vertical-align:middle;
@@ -111,33 +99,33 @@ input[type=range]:focus {
 input[type=range]::-webkit-slider-runnable-track {
 	outline:none;
 	width:100%;
-	height:5px;
+	height:3px;
 	cursor:pointer;
 	background:#aaa;
-	border-radius:5px;
+	border-radius:3px;
 }
 input[type=range]::-webkit-slider-thumb {
 	height:20px;
 	width:20px;
 	border-radius:50%;
-	background:#000;
+	background:#fff;
 	cursor:pointer;
 	-webkit-appearance:none;
 	margin-top:-8px
 }
 input[type=range]::-moz-range-track {
 	width:100%;
-	height:5px;
+	height:3px;
 	cursor:pointer;
 	background:#aaa;
-	border-radius:5px;
+	border-radius:3px;
 }
 input[type=range]::-moz-range-thumb {
 	border:0;
 	height:20px;
 	width:20px;
 	border-radius:50%;
-	background:#000;
+	background:#fff;
 	cursor:pointer
 }
 input[type=range]::-moz-focus-outer {
@@ -145,7 +133,7 @@ input[type=range]::-moz-focus-outer {
 }
 input[type=range]::-ms-track {
 	width:100%;
-	height:5px;
+	height:3px;
 	background:transparent;
 	border-color:transparent;
 	border-width:12px 0;
@@ -156,12 +144,13 @@ input[type=range]::-ms-thumb {
 	height:20px;
 	width:20px;
 	border-radius:50%;
-	background:#000
+	background:#fff
 }
 input[type=range]::-ms-fill-lower,input[type=range]::-ms-fill-upper {
 	background:#aaa;
-	border-radius:5px
+	border-radius:3px
 }
 input[type=range]:focus::-ms-fill-lower,input[type=range]:focus::-ms-fill-upper {
 	background:#aaa
 }
+*/
