--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -8,6 +8,7 @@ body {
 	font-family: Open Sans,Helvetica,Arial,sans-serif;
 	color: #fff;
 	background: radial-gradient(ellipse at center,#484b5a 0,#1d2029 100%);
+	user-select: none;
 }
 
 #wrapper {
