--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -36,11 +36,12 @@ body {
 }
 
 #headline {
-	top: 1rem;
+	top: 0.5rem;
 	left: 0px;
 	width: calc(100vw - 75vh);
-	line-height: 1.2rem;
+	line-height: 1.2em;
 	text-align: center;
+	font-size: min(3.5vw, 18px);
 }
 
 #chartContainer {
