--- a/docs/script/main.css
+++ b/docs/script/main.css
@@ -40,7 +40,7 @@ body {
 	left: 0px;
 	width: calc(100vw - 75vh);
 	line-height: 1em;
-	font-size: min(4vw, 18px);
+	font-size: min(4vw, 16px);
 }
 
 #headline p {
@@ -86,8 +86,8 @@ body {
 	text-decoration-color: #fff;
 }
 #finger {
-	width: 20vw;
-	height: 28vw;
+	width: 20vmin;
+	height: 28vmin;
 	pointer-events: none;
 	display: none;
 	position: absolute;
